--- a/package.json
+++ b/package.json
@@ -14,5 +14,12 @@
   ],
   "author": "",
   "license": "MIT",
-  "type": "commonjs"
+  "type": "commonjs",
+  "dependencies": {
+    "ajv": "^8.12.0",
+    "async-mutex": "^0.4.0",
+    "express": "^4.19.2",
+    "json-rpc-2.0": "^1.7.0",
+    "localtunnel": "^2.0.2"
+  }
 }
