--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   },
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.20.1",
-    "localtunnel": "^2.0.2",
+    "ngrok": "^4.3.3",
     "onoff": "^6.0.3"
   },
   "devDependencies": {
