--- a/package.json
+++ b/package.json
@@ -2,20 +2,16 @@
   "name": "gpt_car",
   "version": "1.0.0",
   "description": "Minimal MCP server for the GPT car controller.",
-  "main": "dist/index.js",
+  "main": "build/index.js",
   "type": "module",
   "scripts": {
       "build": "tsc && chmod 755 build/index.js",
-      "dev": "npm run build && node build/index.js",
-      "start": "npm run build && node build/index.js"
+      "start": "pnpm run build && node build/index.js"
   },
-   "bin": {
-      "create-mcp-server": "./build/index.js"
-  }, 
   "keywords": [
     "mcp",
-    "motor",
-    "controller"
+    "motor controller",
+    "raspberry pi"
   ],
    "files": [
     "build"
@@ -27,7 +23,8 @@
   },
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.20.2",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "zod": "^3.23.8"
   },
   "optionalDependencies": {
     "pigpio": "^3.3.1"
