--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,14 +4,15 @@
     "module": "NodeNext",
     "moduleResolution": "nodenext",
     "outDir": "./build",
-    "rootDir": "./mcp-server",
+    "rootDir": ".",
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true
   },
   "include": [
-    "mcp-server/**/*",
+    "./**/*",
+    "./chatgpt-widget/**/*",
     "node_modules/@modelcontextprotocol"
   ],
   "exclude": [
