--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "build/mcp-server/index.js",
   "type": "module",
   "scripts": {
-    "build": "tsc && chmod -R 755 build",
+    "build": "tsc && pnpm run copy-assets",
+    "copy-assets": "copyfiles \"chatgpt-widget/**/*\" build",
     "start": "pnpm run build && node build/mcp-server/index.js"
   },
   "keywords": [
@@ -24,12 +25,15 @@
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.20.2",
     "express": "^5.1.0",
-    "pigpio": "^3.3.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/express": "^5.0.4",
     "@types/node": "^24.9.1",
+    "copyfiles": "^2.4.1",
     "typescript": "^5.9.3"
+  },
+  "optionalDependencies": {
+    "pigpio": "^3.3.1"
   }
 }
